<?xml version="1.0"?>
<package format="2">
  <name>abot</name>
  <version>0.0.0</version>

  <description>The abot package</description>

  <maintainer email="kamal@todo.todo">kamal</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend> 
  <exec_depend>abot_description</exec_depend>

 <export><metapackage/></export>

</package>
